# saleae-logic2-mcp

./: .gitignore  CITATION.cff  NOTICE  README.md  pyproject.toml
src/saleae_mcp/: __init__.py  adapter.py  server.py
tests/: conftest.py  test_adapter.py  test_server.py
